Improve form, fix typo, add comments, clean up pom.xml
Improve form for addasset and addborrowhistory: now user can not only see in droplist the room's number but also if it's a storage for clarity.
Change storehouse to a storage in ERoomType enum class.
Add various comments from project copy that were removed beforehand.
Delete commented dependencies in pom.xml file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,23 @@
+#spring.security.user.name = a
+#spring.security.user.password = a
 spring.mvc.format.date=yyyy-MM-dd
+#server.error.whitelabel.enabled=false
+#server.error.include-message=always
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:dcbapp
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:dcbapp
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cchrs
-#spring.datasource.username=Ada
-#spring.datasource.password=BerriedDelightAndCoffee1@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.batch.job.enabled=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cchrs
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.username=Ada
+spring.datasource.password=BerriedDelightAndCoffee1@
+spring.batch.job.enabled=false
 
 spring.thymeleaf.cache=false
 #logging.level.org.springframework.web=debug
