--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-java8time</artifactId>
+		</dependency>
 		
 		<dependency><!-- validation annotations -->
 			<groupId>org.springframework.boot</groupId>
@@ -45,7 +50,7 @@
 			<version>8.3.0</version>			
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<!--<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
