--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #spring.security.user.name = a
 #spring.security.user.password = a
-spring.mvc.format.date=yyyy-MM-dd
+#spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=iso
 #server.error.whitelabel.enabled=false
 #server.error.include-message=always
 
@@ -11,7 +12,8 @@ spring.mvc.format.date=yyyy-MM-dd
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop 
+#update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cchrs
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
