--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,10 @@ spring.mvc.format.date-time=iso
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=create-drop 
-#update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true #to initialize Hibernate before executing data.sql script
+
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cchrs
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
