--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,7 @@
-#spring.security.user.name = a
-#spring.security.user.password = a
-#spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=iso
-#server.error.whitelabel.enabled=false
-#server.error.include-message=always
 
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:dcbapp
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true #to initialize Hibernate before executing data.sql script
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cchrs
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -24,12 +11,12 @@ spring.datasource.password=BerriedDelightAndCoffee1@
 spring.batch.job.enabled=false
 
 spring.thymeleaf.cache=false
-#logging.level.org.springframework.web=debug
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.type=trace
 
+#logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
